Fix render on safari

--- a/app/assets/stylesheets/assets-store/sections/_color_scheme.css.scss
+++ b/app/assets/stylesheets/assets-store/sections/_color_scheme.css.scss
@@ -21,7 +21,7 @@
 
 .color-list {
   li {
-    display: inline-flex;
+    display: inline-block;
     margin: 0 10px;
     text-align: center;
   }
